feat: add blob display helpers (#177)
