# docs/swagger.json
@@ -1059,6 +1059,9 @@
                 "base_fee_per_blob_gas": {
                     "type": "string"
                 },
+                "base_fee_per_blob_gas_gwei": {
+                    "type": "string"
+                },
                 "blob_gas_used": {
                     "type": "integer"
                 },
@@ -1070,6 +1073,9 @@
                 },
                 "block_number": {
                     "type": "integer"
+                },
+                "block_url": {
+                    "type": "string"
                 },
                 "confirmed": {
                     "type": "boolean"
@@ -1083,10 +1089,16 @@
                 "from_address": {
                     "type": "string"
                 },
+                "from_address_url": {
+                    "type": "string"
+                },
                 "max_cost_wei": {
                     "type": "string"
                 },
                 "max_fee_per_blob_gas": {
+                    "type": "string"
+                },
+                "max_fee_per_blob_gas_gwei": {
                     "type": "string"
                 },
                 "network_id": {
@@ -1104,7 +1116,13 @@
                 "tip_per_blob_gas": {
                     "type": "string"
                 },
+                "tip_per_blob_gas_gwei": {
+                    "type": "string"
+                },
                 "total_cost_eth": {
+                    "type": "string"
+                },
+                "transaction_url": {
                     "type": "string"
                 },
                 "tx_hash": {
@@ -1122,6 +1140,9 @@
                     "type": "integer"
                 },
                 "blob_base_fee": {
+                    "type": "string"
+                },
+                "blob_base_fee_gwei": {
                     "type": "string"
                 },
                 "blob_count": {
@@ -1410,6 +1431,9 @@
                 "current_base_fee": {
                     "type": "string"
                 },
+                "current_base_fee_gwei": {
+                    "type": "string"
+                },
                 "current_excess_gas": {
                     "type": "integer"
                 },
@@ -1429,6 +1453,9 @@
                     "type": "string"
                 },
                 "predicted_next_fee": {
+                    "type": "string"
+                },
+                "predicted_next_fee_gwei": {
                     "type": "string"
                 },
                 "recent_blocks": {
